# google-keep-notes-parser

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_PARSER_IMPLEMENTATION.md  PARSERS.md  README.md  README_E2E.md  demo_next_parser.py  nats_publisher.py  parse_notes.py  pyproject.toml  test_components.py  test_e2e_direct.sh  test_e2e_full.py  test_e2e_nats.py  test_e2e_simple.py  test_next_parser.py  test_training_parser.py
.github/workflows/: ci.yml
parsers/: __init__.py  base.py  generic_notes_parser.py  hackernews_parser.py  next_parser.py  time_entry_parser.py  tokens.yaml  training_parser.py
sample/time-entry/: 1.json
sample/training/: sample1.json
schemas/: generic_notes.schema.json  hackernews.schema.json  time_entry.schema.json  training.schema.json
tests/: test_generic_notes_parser.py  test_hackernews_parser.py  test_time_entry_parser.py
